# avanza-mcp

./: .gitignore  CHANGELOG.md  INSTRUCTIONS.md  MEMORY.md  README.md  WARMUP.md  avanza_cli.py  pyproject.toml  requirements.txt
.githooks/: pre-commit
.github/: dependabot.yml
.github/workflows/: codeql.yml  dependency-review.yml  security-audit.yml  tests.yml
.playwright-mcp/: avanza_hourly_selected_snapshot.json  avanza_hourly_snapshot.json  page-2026-05-04T01-10-42-759Z.yml  page-2026-05-05T14-11-14-598Z.yml  page-2026-05-05T14-11-31-586Z.yml
INSTRUCTIONS/: .gitkeep  AUTOMATION_HOURLY_MONITORING.template.md  INSTRUCTIONS.template.md  MEMORY.template.md  TRACKER_STATE.template.md  WARMUP.template.md
avanza_mcp/: __init__.py  auth.py  avanza_ext.py  cli.py  config.py  market_data.py  models.py  paper.py  records.py  rendering.py  stoploss_rules.py  uilock.py  update_check.py  utils.py
avanza_mcp/core/: __init__.py  bridge.py  kernel.py  login.py  refresh.py  sessions.py  snapshots.py  trading.py
avanza_mcp/mcp/: __init__.py  catalog.py  proxy.py  server.py
avanza_mcp/tui/: __init__.py  app.py  layout.py  login.py  mcp_bridge.py  mcp_snapshots.py  refresh.py  sessions.py  trading.py
avanza_mcp/web/: __init__.py  app.py  auth.py  events.py  kernel.py  runtime.py  serializers.py
avanza_mcp/web/api/: data.py  mcp.py  paper.py  research.py  sessions.py  trading.py
avanza_mcp/web/static/: actions.js  api.js  app.js  index.html  loghl.js  store.js  theme.js  ws.js
avanza_mcp/web/static/components/: ActiveTradesPanel.js  ActivityLog.js  AppShell.js  CancelDialog.js  ConfirmTyped.js  DataTable.js  HistoryOverlay.js  LoginView.js  McpPanel.js  OpenOrdersPanel.js  OrderTicket.js  PaperView.js  PerformanceChart.js  PortfolioTable.js  RecommendationsOverlay.js  SessionLoginModal.js  StopLossTicket.js  StopLossesOverlay.js  TopBar.js  TvListsOverlay.js
avanza_mcp/web/static/styles/: base.css  components.css  tables.css  tokens.css
docs/: architecture.md  development.md  operations.md  web.md
scripts/: verify.sh
tests/: conftest.py  test_cli.py  test_core_kernel.py  test_tui_helpers.py  test_web_api.py  test_web_auth.py  test_web_static.py
