[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avanza-mcp"
version = "0.1.3"
description = "CLI/TUI Avanza toolkit with MCP bridge, paper trading, and stop-loss/order workflows built on avanza-api."
authors = [
  {name = "Hamid Kashfi"},
  {name = "Codex (OpenAI)"},
]
requires-python = ">=3.11"
dependencies = [
  "avanza-api>=16.1.0,<17",
  "textual>=6.1,<7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
]

[project.scripts]
avanza-cli = "avanza_cli:main"

[tool.setuptools]
py-modules = ["avanza_cli"]

[tool.pytest.ini_options]
testpaths = ["tests"]
