[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "avanza-mcp"
version = "0.2.0"
description = "CLI/TUI Avanza toolkit with MCP bridge, paper trading, and stop-loss/order workflows built on avanza-api."
authors = [
  {name = "Hamid Kashfi"},
  {name = "Codex (OpenAI)"},
]
requires-python = ">=3.11"
dependencies = [
  "avanza-api>=16.1.0,<17",
  "fastapi>=0.115,<1",
  "rich>=13",
  "textual>=6.1,<7",
  "uvicorn>=0.30,<1",
  "websockets>=12",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.27",
  "pytest>=8",
]

[project.scripts]
avanza-cli = "avanza_cli:main"

[tool.setuptools]
py-modules = ["avanza_cli"]
packages = ["avanza_mcp", "avanza_mcp.core", "avanza_mcp.external", "avanza_mcp.mcp", "avanza_mcp.tui", "avanza_mcp.web", "avanza_mcp.web.api"]
include-package-data = true

[tool.setuptools.package-data]
avanza_mcp = ["web/static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
